Firefox horizontal scrolling fix
Added box-sizing: border-box

--- a/app/assets/stylesheets/elements/_layout.scss
+++ b/app/assets/stylesheets/elements/_layout.scss
@@ -1,5 +1,6 @@
 html {
     font-family: $primary-font;
+    box-sizing: border-box;
 }
 
 body {
